# kit-config

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  README.md  clippy.toml  debug_dotenv.rs  rustfmt.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.serena/: project.yml
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  pi-agent.md
.specify/workflows/: workflow-registry.json
crates/config-core/: Cargo.toml
crates/config-core/src/: config_module.rs  errors.rs  extension.rs  lib.rs  profile.rs  source.rs  validation.rs
crates/config-loaders/: Cargo.toml
crates/config-loaders/src/: cloud.rs  lib.rs  loader.rs
crates/config-loaders/src/sources/: key_value_map.rs  mod.rs
crates/config-models/: Cargo.toml
crates/config-models/src/: lib.rs  logging.rs
crates/config-models/src/infra/: grpc.rs  http.rs  mod.rs  postgres.rs  redis.rs
crates/kit-config/: Cargo.toml
crates/kit-config/src/: lib.rs  modules.rs  sources.rs
crates/kit-config/tests/: grpc_test.rs  toml_test.rs  validation_test.rs
docs/: README.md  cloud.md  defaults.md  extending.md  key_value_maps.md  logging.md  macros.md  sources.md
openspec/: config.yaml
openspec/changes/archive/2026-07-03-kit-001/: design.md  proposal.md  state.yaml  tasks.md  verify-report.md
openspec/changes/kit-001/: design.md  state.yaml  tasks.md
openspec/specs/kit-config/: spec.md
specs/001-config-001-configuration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-config-001-configuration/checklists/: requirements.md
specs/001-config-001-configuration/contracts/: public-api.md
src/: cloud.rs  errors.rs  lib.rs
src/extension/: mod.rs
src/loader/: mod.rs
src/modules/: logging.rs  mod.rs
src/modules/infra/: grpc.rs  http.rs  postgres.rs  redis.rs
src/profile/: mod.rs
src/sources/: defaults.rs  environment.rs  key_value_map.rs  mod.rs  toml.rs
src/validation/: mod.rs  validator.rs
tests/: dotenv_test.rs
