[package]
name = "config-loaders"
version = "0.1.0"
edition = "2024"

[features]
aws = []
gcp = []
digitalocean = []
cloud = ["aws", "gcp", "digitalocean"]

[dependencies]
config-core = { path = "../config-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
toml = "0.8"
