[package]
name = "kit-config"
version = "0.1.0"
edition = "2024"

[features]
default = ["config-core", "config-models", "config-loaders"]
config-core = ["dep:config-core"]
config-models = ["dep:config-models", "config-core"]
config-loaders = ["dep:config-loaders", "config-core"]

[dependencies]
config-core = { path = "../config-core", optional = true }
config-models = { path = "../config-models", optional = true }
config-loaders = { path = "../config-loaders", optional = true }

[dev-dependencies]
tempfile = "3.0"
serde_json = "1.0"
